# UJ-Advanced-Computer-Graphics

project_1/: .gitignore  main.py
project_1/utils/: custom_logger.py  generate_image.py  generate_patterns.py  ocr.py
project_2/: .gitignore  CMakeLists.txt
project_2/src/: Main.cpp
project_2/src/input/: InputHandler.cpp  InputHandler.h
project_2/src/libs/: BalisticCurve.h
project_2/src/scene/: Scene.cpp  Scene.h
project_2/src/scene/collisions/: ProjectileCollisionCallback.cpp  ProjectileCollisionCallback.h
project_2/src/scene/objects/: Cannon.cpp  Cannon.h  Grass.cpp  Grass.h  Projectile.cpp  Projectile.h  Target.cpp  Target.h
